# routes/admin.routes.js
@@ -4,7 +4,6 @@ const express = require('express');
 const adminRoutes = express.Router();
 const {register,login} = require('../controllers/adminControllers.js');
 
-adminRoutes.post('/register', register);
 adminRoutes.post('/login', login);
 
 module.exports =  {adminRoutes};
